--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -1,153 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Indian Geography Quiz</title>
+  <title>Indian Geography Online MCQ Quiz</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 24px; }
-    .question { margin-bottom: 18px; }
-    #result { font-weight: bold; margin-top: 18px; }
-    button { margin-right: 10px; }
+    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
+    .quiz-container { background: #fff; padding: 24px; max-width: 600px; margin: 40px auto; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.08); }
+    .question { font-size: 1.2em; margin-bottom: 18px; }
+    .options { margin-bottom: 16px; }
+    .options button { display: block; width: 100%; padding: 10px; margin: 6px 0; border: none; background: #e2e2e2; cursor: pointer; border-radius: 4px; font-size: 1em; }
+    .options button:hover { background: #d4d4d4; }
+    .result { font-size: 1.1em; margin-top: 20px; }
+    .score { font-weight: bold; color: #1a8917; }
+    .next-btn { margin-top: 16px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #007bff; color: #fff; cursor: pointer; }
+    .next-btn:disabled { background: #aaa; }
   </style>
 </head>
 <body>
-  <h2>Indian Geography Quiz (Region-wise)</h2>
-  <form id="quizForm"></form>
-  <button type="button" onclick="submitQuiz()">Submit</button>
-  <button type="button" onclick="resetQuiz()">Reset</button>
-  <div id="result"></div>
-
+  <div class="quiz-container">
+    <div id="question" class="question"></div>
+    <div id="options" class="options"></div>
+    <div id="result" class="result"></div>
+    <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
+  </div>
   <script>
-    // Sample: 5 questions per region. Replace with your full 500-question array!
-    const allQuestions = [
-      // North India (sample)
-      {region: "North India", question: "Which river is known as the lifeline of North India?", options: ["Yamuna", "Ganga", "Indus", "Beas"], answer: "Ganga"},
-      {region: "North India", question: "Which city is called the 'Gateway to the Himalayas'?", options: ["Dehradun", "Shimla", "Haridwar", "Manali"], answer: "Haridwar"},
-      {region: "North India", question: "Which state shares its border with China in North India?", options: ["Punjab", "Uttarakhand", "Haryana", "Delhi"], answer: "Uttarakhand"},
-      {region: "North India", question: "What is the capital of Himachal Pradesh?", options: ["Shimla", "Dharamshala", "Manali", "Kullu"], answer: "Shimla"},
-      {region: "North India", question: "Which North Indian city is famous for the Golden Temple?", options: ["Amritsar", "Chandigarh", "Ludhiana", "Jalandhar"], answer: "Amritsar"},
-      // South India (sample)
-      {region: "South India", question: "Which river is called the 'Dakshina Ganga'?", options: ["Godavari", "Krishna", "Kaveri", "Periyar"], answer: "Godavari"},
-      {region: "South India", question: "Which city is known as the 'Queen of the Arabian Sea'?", options: ["Kochi", "Chennai", "Mangalore", "Vishakhapatnam"], answer: "Kochi"},
-      {region: "South India", question: "Which state is famous for the Meenakshi Temple?", options: ["Kerala", "Tamil Nadu", "Karnataka", "Andhra Pradesh"], answer: "Tamil Nadu"},
-      {region: "South India", question: "Which is the largest city in Karnataka?", options: ["Mysore", "Bangalore", "Hubli", "Mangalore"], answer: "Bangalore"},
-      {region: "South India", question: "Which South Indian state has the highest literacy rate?", options: ["Kerala", "Tamil Nadu", "Karnataka", "Andhra Pradesh"], answer: "Kerala"},
-      // East India (sample)
-      {region: "East India", question: "Which city is known as the 'City of Joy'?", options: ["Patna", "Kolkata", "Bhubaneswar", "Ranchi"], answer: "Kolkata"},
-      {region: "East India", question: "Which river flows through Kolkata?", options: ["Mahanadi", "Hooghly", "Brahmaputra", "Subarnarekha"], answer: "Hooghly"},
-      {region: "East India", question: "What is the capital of Odisha?", options: ["Cuttack", "Bhubaneswar", "Puri", "Sambalpur"], answer: "Bhubaneswar"},
-      {region: "East India", question: "Which plateau is located in Jharkhand?", options: ["Chota Nagpur Plateau", "Deccan Plateau", "Malwa Plateau", "Baghelkhand Plateau"], answer: "Chota Nagpur Plateau"},
-      {region: "East India", question: "Which state is famous for the Jagannath Rath Yatra?", options: ["West Bengal", "Odisha", "Bihar", "Jharkhand"], answer: "Odisha"},
-      // West India (sample)
-      {region: "West India", question: "Which city is known as the 'Financial Capital of India'?", options: ["Ahmedabad", "Pune", "Mumbai", "Surat"], answer: "Mumbai"},
-      {region: "West India", question: "Which state is famous for the Rann of Kutch?", options: ["Maharashtra", "Goa", "Gujarat", "Rajasthan"], answer: "Gujarat"},
-      {region: "West India", question: "Which is the largest state in West India by area?", options: ["Goa", "Maharashtra", "Gujarat", "Rajasthan"], answer: "Rajasthan"},
-      {region: "West India", question: "Which city is known as the 'Pink City'?", options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"], answer: "Jaipur"},
-      {region: "West India", question: "Which state is famous for Ajanta and Ellora caves?", options: ["Gujarat", "Maharashtra", "Goa", "Rajasthan"], answer: "Maharashtra"},
-      // Central India (sample)
-      {region: "Central India", question: "Which state is known as the 'Heart of India'?", options: ["Chhattisgarh", "Madhya Pradesh", "Uttar Pradesh", "Maharashtra"], answer: "Madhya Pradesh"},
-      {region: "Central India", question: "Which river flows through Jabalpur?", options: ["Narmada", "Godavari", "Mahanadi", "Yamuna"], answer: "Narmada"},
-      {region: "Central India", question: "What is the capital of Chhattisgarh?", options: ["Bhopal", "Raipur", "Indore", "Bilaspur"], answer: "Raipur"},
-      {region: "Central India", question: "Which national park is famous for tigers in Madhya Pradesh?", options: ["Kanha", "Gir", "Kaziranga", "Jim Corbett"], answer: "Kanha"},
-      {region: "Central India", question: "Which plateau covers a major part of Central India?", options: ["Malwa Plateau", "Chota Nagpur Plateau", "Deccan Plateau", "Baghelkhand Plateau"], answer: "Malwa Plateau"},
-      // Northeast India (sample)
-      {region: "Northeast India", question: "Which state is known as the 'Land of the Rising Sun'?", options: ["Assam", "Arunachal Pradesh", "Nagaland", "Manipur"], answer: "Arunachal Pradesh"},
-      {region: "Northeast India", question: "Kaziranga National Park is famous for which animal?", options: ["Tiger", "Elephant", "One-horned Rhinoceros", "Leopard"], answer: "One-horned Rhinoceros"},
-      {region: "Northeast India", question: "Which river flows through Assam?", options: ["Ganga", "Brahmaputra", "Yamuna", "Godavari"], answer: "Brahmaputra"},
-      {region: "Northeast India", question: "Shillong is the capital of which state?", options: ["Nagaland", "Meghalaya", "Mizoram", "Tripura"], answer: "Meghalaya"},
-      {region: "Northeast India", question: "Which state is famous for Loktak Lake?", options: ["Manipur", "Assam", "Tripura", "Nagaland"], answer: "Manipur"}
-    ];
-
-    const regions = [
-      "North India", "South India", "East India",
-      "West India", "Central India", "Northeast India"
-    ];
-
-    let questionsByRegion = {};
-    regions.forEach(region => {
-      questionsByRegion[region] = allQuestions.filter(q => q.region === region);
-    });
-
-    let previousQuiz = [];
-
-    // Shuffle utility
-    function shuffle(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
+    // Sample Indian Geography questions (replace/add as needed)
+    const questions = [
+      {
+        question: "Which river is known as the lifeline of North India?",
+        options: ["Yamuna", "Ganga", "Indus", "Beas"],
+        answer: 1
+      },
+      {
+        question: "What is the capital of Kerala?",
+        options: ["Kochi", "Thiruvananthapuram", "Calicut", "Kannur"],
+        answer: 1
+      },
+      {
+        question: "Which state is known as the 'Heart of India'?",
+        options: ["Madhya Pradesh", "Chhattisgarh", "Uttar Pradesh", "Maharashtra"],
+        answer: 0
+      },
+      {
+        question: "Kaziranga National Park is famous for which animal?",
+        options: ["Tiger", "Elephant", "One-horned Rhinoceros", "Leopard"],
+        answer: 2
+      },
+      {
+        question: "Which city is called the 'Pink City'?",
+        options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"],
+        answer: 2
       }
-      return array;
-    }
+      // Add more questions here...
+    ];
 
-    // Select 4 random questions per region, max 2 repeats from previousQuiz
-    function selectQuiz() {
-      let newQuiz = [];
-      let repeats = 0;
-      let previousSet = new Set(previousQuiz.map(q => q.question));
-      regions.forEach(region => {
-        let regionQuestions = questionsByRegion[region].slice();
-        shuffle(regionQuestions);
+    let currentQuestion = 0;
+    let score = 0;
+    let answered = false;
 
-        let selected = [];
-        for (let q of regionQuestions) {
-          if (selected.length < 4) {
-            if (!previousSet.has(q.question) || repeats >= 2) {
-              selected.push(q);
-            } else if (repeats < 2) {
-              selected.push(q);
-              repeats++;
-            }
-          }
-        }
-        // Fill up if not enough
-        while (selected.length < 4) {
-          for (let q of regionQuestions) {
-            if (!selected.includes(q)) {
-              selected.push(q);
-              if (previousSet.has(q.question)) repeats++;
-              if (selected.length === 4) break;
-            }
-          }
-        }
-        newQuiz = newQuiz.concat(selected.slice(0, 4));
+    function showQuestion() {
+      answered = false;
+      const q = questions[currentQuestion];
+      document.getElementById('question').textContent = `Q${currentQuestion+1}: ${q.question}`;
+      const optionsDiv = document.getElementById('options');
+      optionsDiv.innerHTML = '';
+      q.options.forEach((option, idx) => {
+        const btn = document.createElement('button');
+        btn.textContent = option;
+        btn.onclick = () => checkAnswer(idx, btn);
+        optionsDiv.appendChild(btn);
       });
-      // If repeats > 2, try again
-      if (repeats > 2) return selectQuiz();
-      return newQuiz;
+      document.getElementById('result').textContent = '';
+      document.getElementById('nextBtn').style.display = 'none';
     }
 
-    function loadQuiz(quizQuestions) {
-      const form = document.getElementById('quizForm');
-      form.innerHTML = '';
-      quizQuestions.forEach((q, idx) => {
-        form.innerHTML += `<div class="question">
-          <b>Q${idx + 1} (${q.region}):</b> ${q.question}<br>
-          ${q.options.map(opt =>
-            `<label><input type="radio" name="q${idx}" value="${opt}"> ${opt}</label>`
-          ).join(' ')}
-        </div>`;
+    function checkAnswer(selectedIdx, btn) {
+      if (answered) return;
+      answered = true;
+      const q = questions[currentQuestion];
+      const optionsDiv = document.getElementById('options');
+      Array.from(optionsDiv.children).forEach((b, idx) => {
+        b.disabled = true;
+        if(idx === q.answer) b.style.background = '#a5d6a7'; // green for correct
+        if(idx === selectedIdx && idx !== q.answer) b.style.background = '#ef9a9a'; // red for wrong
       });
+      if (selectedIdx === q.answer) {
+        document.getElementById('result').innerHTML = '<span style="color:green;">Correct!</span>';
+        score++;
+      } else {
+        document.getElementById('result').innerHTML = `<span style="color:red;">Wrong!</span> The correct answer is: <b>${q.options[q.answer]}</b>`;
+      }
+      document.getElementById('nextBtn').style.display = 'inline-block';
+      if(currentQuestion === questions.length - 1) {
+        document.getElementById('nextBtn').textContent = "Show Score";
+      } else {
+        document.getElementById('nextBtn').textContent = "Next";
+      }
     }
 
-    function submitQuiz() {
-      let score = 0;
-      previousQuiz.forEach((q, idx) => {
-        const selected = document.querySelector(`input[name="q${idx}"]:checked`);
-        if (selected && selected.value === q.answer) score++;
-      });
-      document.getElementById('result').innerHTML =
-        `<span>Your Score: ${score} / ${previousQuiz.length}</span>`;
+    document.getElementById('nextBtn').onclick = function() {
+      currentQuestion++;
+      if(currentQuestion < questions.length) {
+        showQuestion();
+      } else {
+        showResult();
+      }
+    };
+
+    function showResult() {
+      document.querySelector('.quiz-container').innerHTML =
+        `<h2>Quiz Completed!</h2>
+         <p class="score">Your Score: ${score} / ${questions.length}</p>
+         <button onclick="window.location.reload()">Restart Quiz</button>`;
     }
 
-    function resetQuiz() {
-      const quizQuestions = selectQuiz();
-      previousQuiz = quizQuestions;
-      loadQuiz(quizQuestions);
-      document.getElementById('result').innerHTML = '';
-    }
-
-    // On page load
-    resetQuiz();
+    // Start quiz
+    showQuestion();
   </script>
 </body>
 </html>
