--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -17,14 +17,13 @@
   </style>
 </head>
 <body>
-  <div class="quiz-container">
+  <div class="quiz-container" id="quizContainer">
     <div id="question" class="question"></div>
     <div id="options" class="options"></div>
     <div id="result" class="result"></div>
     <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
   </div>
   <script>
-    // 1. Add your unique questions here
     const questions = [
       {
         question: "Which river is known as the lifeline of North India?",
@@ -50,11 +49,110 @@
         question: "Which city is called the 'Pink City'?",
         options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"],
         answer: 2
-      },
-      // Add more unique questions here!
+      }
+      [
+  {
+    question: "Which city is called the 'Pink City'?",
+    options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"],
+    answer: 2
+  },
+  {
+    question: "Which is the longest river that originates in India?",
+    options: ["Yamuna", "Ganga", "Godavari", "Narmada"],
+    answer: 1
+  },
+  {
+    question: "Which Indian coast is known as the 'Land of Temples'?",
+    options: ["Malabar Coast", "Coromandel Coast", "Konkan Coast", "Northern Circars"],
+    answer: 1
+  },
+  {
+    question: "What is the highest peak of peninsular India?",
+    options: ["Anai Peak", "Doddabetta", "Kangchenjunga", "Nanda Devi"],
+    answer: 0
+  },
+  {
+    question: "Which state is the sole producer of agate, chalk, and perlite in India?",
+    options: ["Rajasthan", "Madhya Pradesh", "Gujarat", "Jharkhand"],
+    answer: 2
+  },
+  {
+    question: "Where was India's first steel factory established?",
+    options: ["Jamshedpur", "Bhilai", "Rourkela", "Durgapur"],
+    answer: 0
+  },
+  {
+    question: "Which desert is the largest in India?",
+    options: ["Thar Desert", "Rann of Kutch", "Great Indian Desert", "Cold Desert"],
+    answer: 0
+  },
+  {
+    question: "Which city is known as the 'City of Lakes' in India?",
+    options: ["Bhopal", "Udaipur", "Hyderabad", "Chennai"],
+    answer: 0
+  },
+  {
+    question: "Which of the following is the longest mountain range in India?",
+    options: ["Himalayas", "Aravalli", "Western Ghats", "Eastern Ghats"],
+    answer: 0
+  },
+  {
+    question: "Which river is known as the 'Sorrow of Bihar' due to frequent floods?",
+    options: ["Kosi", "Ganga", "Yamuna", "Sone"],
+    answer: 0
+  },
+  {
+    question: "Which state has the largest area in India?",
+    options: ["Maharashtra", "Rajasthan", "Uttar Pradesh", "Madhya Pradesh"],
+    answer: 1
+  },
+  {
+    question: "Which Indian state is famous for the 'Backwaters'?",
+    options: ["Kerala", "Goa", "Tamil Nadu", "Karnataka"],
+    answer: 0
+  },
+  {
+    question: "The Sundarbans mangrove forest is located in which Indian state?",
+    options: ["West Bengal", "Odisha", "Andhra Pradesh", "Tamil Nadu"],
+    answer: 0
+  },
+  {
+    question: "Which city is known as the 'Manchester of India'?",
+    options: ["Mumbai", "Surat", "Ahmedabad", "Chennai"],
+    answer: 2
+  },
+  {
+    question: "Which plateau is known as the 'Roof of the World' in India?",
+    options: ["Deccan Plateau", "Chota Nagpur Plateau", "Tibetan Plateau", "Ladakh Plateau"],
+    answer: 3
+  },
+  {
+    question: "Which Indian state is the leading producer of tea?",
+    options: ["Assam", "West Bengal", "Kerala", "Tamil Nadu"],
+    answer: 0
+  },
+  {
+    question: "Which river forms the famous 'Dhuandhar Falls'?",
+    options: ["Narmada", "Tungabhadra", "Godavari", "Cauvery"],
+    answer: 0
+  },
+  {
+    question: "Which city is the capital of the Indian state of Gujarat?",
+    options: ["Ahmedabad", "Surat", "Gandhinagar", "Vadodara"],
+    answer: 2
+  },
+  {
+    question: "Which Indian state is known as the 'Land of Five Rivers'?",
+    options: ["Punjab", "Haryana", "Rajasthan", "Uttar Pradesh"],
+    answer: 0
+  },
+  {
+    question: "Which Indian state has the largest coastline?",
+    options: ["Tamil Nadu", "Gujarat", "Andhra Pradesh", "Maharashtra"],
+    answer: 1
+  }
     ];
 
-    // 2. Shuffle function to randomize questions
     function shuffle(array) {
       for (let i = array.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
@@ -63,11 +161,7 @@
       return array;
     }
 
-    // 3. Shuffle questions at the start
-    let shuffledQuestions = shuffle([...questions]);
-    let currentQuestion = 0;
-    let score = 0;
-    let answered = false;
+    let shuffledQuestions, currentQuestion, score, answered;
 
     function showQuestion() {
       answered = false;
@@ -92,8 +186,8 @@
       const optionsDiv = document.getElementById('options');
       Array.from(optionsDiv.children).forEach((b, idx) => {
         b.disabled = true;
-        if(idx === q.answer) b.style.background = '#a5d6a7'; // green for correct
-        if(idx === selectedIdx && idx !== q.answer) b.style.background = '#ef9a9a'; // red for wrong
+        if(idx === q.answer) b.style.background = '#a5d6a7';
+        if(idx === selectedIdx && idx !== q.answer) b.style.background = '#ef9a9a';
       });
       if (selectedIdx === q.answer) {
         document.getElementById('result').innerHTML = '<span style="color:green;">Correct!</span>';
@@ -119,14 +213,37 @@
     };
 
     function showResult() {
-      document.querySelector('.quiz-container').innerHTML =
+      document.getElementById('quizContainer').innerHTML =
         `<h2>Quiz Completed!</h2>
          <p class="score">Your Score: ${score} / ${shuffledQuestions.length}</p>
-         <button onclick="window.location.reload()">Restart Quiz</button>`;
+         <button onclick="resetQuiz()">Restart Quiz</button>`;
     }
 
-    // Start quiz
-    showQuestion();
+    function resetQuiz() {
+      shuffledQuestions = shuffle([...questions]);
+      currentQuestion = 0;
+      score = 0;
+      answered = false;
+      // Restore the original quiz HTML structure
+      document.getElementById('quizContainer').innerHTML = `
+        <div id="question" class="question"></div>
+        <div id="options" class="options"></div>
+        <div id="result" class="result"></div>
+        <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
+      `;
+      document.getElementById('nextBtn').onclick = function() {
+        currentQuestion++;
+        if(currentQuestion < shuffledQuestions.length) {
+          showQuestion();
+        } else {
+          showResult();
+        }
+      };
+      showQuestion();
+    }
+
+    // Initialize the quiz on page load
+    resetQuiz();
   </script>
 </body>
 </html>
